<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_color_2"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/username_registerActivity_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username_register"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#BDBDBD"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password_registerActivity_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password_register"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#BDBDBD"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/username_registerActivity_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_registerActivity_txt"
        app:layout_constraintTop_toBottomOf="@+id/email_registerActivity_txt" />

    <EditText
        android:id="@+id/email_registerActivity_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email_register"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#BDBDBD"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/username_registerActivity_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_registerActivity_txt"
        app:layout_constraintTop_toBottomOf="@+id/username_registerActivity_txt" />

    <Button
        android:id="@+id/button_registerActivity_btt"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="33dp"
        android:background="@drawable/rounded_corner_buttons"
        android:text="@string/register"
        android:textColor="@color/black"
        android:theme="@style/ButtonColor"
        app:layout_constraintEnd_toEndOf="@+id/username_registerActivity_txt"
        app:layout_constraintStart_toStartOf="@+id/username_registerActivity_txt"
        app:layout_constraintTop_toBottomOf="@+id/password_registerActivity_txt" />

    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/already_have_an_account"
        android:textColor="#9E9E9E"
        app:layout_constraintEnd_toEndOf="@+id/button_registerActivity_btt"
        app:layout_constraintStart_toStartOf="@+id/button_registerActivity_btt"
        app:layout_constraintTop_toBottomOf="@+id/button_registerActivity_btt"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="127dp"
        android:layout_marginTop="152dp"
        android:layout_marginBottom="31dp"
        app:layout_constraintBottom_toTopOf="@+id/username_registerActivity_txt"
        app:layout_constraintEnd_toEndOf="@+id/username_registerActivity_txt"
        app:layout_constraintStart_toStartOf="@+id/username_registerActivity_txt"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/locker_red" />
</androidx.constraintlayout.widget.ConstraintLayout>